[package]
name = "signal-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
babel-core = { path = "../babel-core" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.28", features = ["full"] }

[[bin]]
name = "connectome_listener"
path = "src/connectome_listener.rs"
